<resources>
    <string name="app_name">lista1</string>
    <string name="menu">Menu</string>
    <string name="exercicio_2">EXERCICIO 2</string>
    <string name="exercicio_1">EXERCICIO 1</string>
    <string name="tipo_de_email">Tipo de email</string>
    <string name="aplicativos_de_mensagens">Aplicativos de Mensagens</string>
    <string name="tipo_de_aplicativo">Tipo de aplicativo</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="exercicio_3">EXERCICIO 3</string>
    <string name="exercicio_4">EXERCICIO 4</string>
    <string name="exercicio_8">EXERCICIO 8</string>

</resources>